--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server/server.js",
         "build": "NODE_ENV=production webpack",
-        "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve"
+        "dev": "concurrently \"webpack serve --open\" \"node server/server.js\""
     },
     "nodemonConfig": {
         "ignore": [
@@ -18,6 +18,7 @@
     "license": "ISC",
     "dependencies": {
         "browserify": "^17.0.0",
+        "concurrently": "^6.0.2",
         "prop-types": "^15.6.1",
         "express": "^4.16.3",
         "node-fetch": "^2.3.0",
