--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "author": "Joe Nagy",
     "license": "ISC",
     "dependencies": {
+        "cookie-parser": "1.3.2",
+        "cors": "^2.8.4",
+        "querystring": "~0.2.0",
+        "request": "~2.83.0",
         "browserify": "^17.0.0",
         "concurrently": "^6.0.2",
         "prop-types": "^15.6.1",
