--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
     "author": "Joe Nagy",
     "license": "ISC",
     "dependencies": {
-        "cookie-parser": "1.3.2",
-        "cors": "^2.8.4",
-        "querystring": "~0.2.0",
-        "request": "~2.83.0",
+        "@emotion/react": "^11.5.0",
+        "@emotion/styled": "^11.3.0",
+        "@mui/material": "^5.0.6",
+        "@mui/styled-engine-sc": "^5.0.4",
         "browserify": "^17.0.0",
         "concurrently": "^6.0.2",
-        "prop-types": "^15.6.1",
+        "cookie-parser": "1.3.2",
+        "cors": "^2.8.4",
         "express": "^4.16.3",
         "node-fetch": "^2.3.0",
+        "prop-types": "^15.6.1",
+        "querystring": "~0.2.0",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "react-hot-loader": "^4.6.3",
         "react-router": "^4.3.1",
-        "react-router-dom": "^4.3.1"
+        "react-router-dom": "^4.3.1",
+        "request": "~2.83.0",
+        "styled-components": "^5.3.3"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
